# olio-harjoitukset

h3a/: CMakeLists.txt  main.cpp
h3b/: CMakeLists.txt  animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
h4a/: CMakeLists.txt  car.cpp  car.h  engine.cpp  main.cpp  wheel.cpp  wheel.h
h5abc/: CMakeLists.txt  classa1.cpp  classa1.h  classa2.cpp  classa2.h  classb.cpp  classb.h  main.cpp
h6b/: CMakeLists.txt  exampleclass.cpp  exampleclass.h  main.cpp
